--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ artemis.data=Subscribe
 artemis.post.action=Like,Comment
 
 artemis.media.latestVideo=100,SpringBoot Config,600
+
+spring.profiles.active=prod
