command to run app with profiles in run config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ artemis.post.action=Like,Comment
 
 artemis.media.latestVideo=100,SpringBoot Config,600
 
-spring.profiles.active=prod
+#spring.profiles.active=prod
+
+#In run config environment variables
+# -Dspring.profiles.active=dev
+#spring.profiles.active=dev
