--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,19 @@ artemis.media.latestVideo=100,SpringBoot Config,600
 #In run config environment variables
 # -Dspring.profiles.active=dev
 #spring.profiles.active=dev
+
+bluemoon.description=like and subscribe!
+bluemoon.id=2000
+bluemoon.githubRepo=bluemoon-official
+
+bluemoon.latestVideo.id=100
+bluemoon.latestVideo.title=SpringBoot Config
+bluemoon.latestVideo.lengthInSeconds=600
+
+bluemoon.playlists[0]=Java
+bluemoon.playlists[1]=Kotlin
+bluemoon.playlists[2]=Devops
+
+bluemoon.nbrOfVideos.DevopsTutorials=3
+bluemoon.nbrOfVideos.JavaTutorials=5
+bluemoon.nbrOfVideos.KotlinTutorials=2
