time config properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ bluemoon.playlists[2]=Devops
 bluemoon.nbrOfVideos.DevopsTutorials=3
 bluemoon.nbrOfVideos.JavaTutorials=5
 bluemoon.nbrOfVideos.KotlinTutorials=2
+
+zed.timeDefault=1
+zed.timeInNs=10ns
+zed.timeInDays=2
