data size config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ bluemoon.nbrOfVideos.KotlinTutorials=2
 zed.timeDefault=1
 zed.timeInNs=10ns
 zed.timeInDays=2
+
+zed.sizeDefault=1000
+zed.sizeInGB=1GB
+zed.sizeInTB=2TB
