--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,8 @@ zed.sizeInGB=1GB
 zed.sizeInTB=2TB
 
 app.cron.value=0 27 16 * * MON-FRI
+
+spring.threads.virtual.enabled=true
+
+#Apache benchmark
+#ab -n 1600 -c 400 http://127.0.0.1:9898/vt
