send email using java mail sender api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,11 @@ spring.threads.virtual.enabled=true
 
 #Apache benchmark
 #ab -n 1600 -c 400 http://127.0.0.1:9898/vt
+
+#Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<FROM_GMAIL>
+spring.mail.password=<GMAIL_APP_PASSWORD>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
